-[bdist_rpm]
-doc_files = python.lua LICENSE
-use_bzip2 = 1

[metadata]
name = lunatic-python
version = 1.0
author = Gustavo Niemeyer
author_email = gustavo@niemeyer.net
license = LGPL
description = Two-way bridge between Python and Lua
url = http://labix.org/lunatic-python
long_description = Lunatic Python is a two-way bridge between Python and Lua, allowing these
    languages to intercommunicate. Being two-way means that it allows Lua inside
    Python, Python inside Lua, Lua inside Python inside Lua, Python inside Lua
    inside Python, and so on.
